<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UIm050" >

    <!-- title bar -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/title_background" >

        <TextView
            android:id="@+id/title_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_ui_meal_top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_titlebar" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_m050_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scaleType="centerInside"
        android:src="@drawable/noimg96" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_m050_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/str_m050_time"
                android:textSize="@dimen/word_size_normal" />

            <TextView
                android:id="@+id/txt_m050_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_m050_price"
                android:textSize="@dimen/word_size_normal" />

            <TextView
                android:id="@+id/txt_m050_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_m050_score"
                android:textSize="@dimen/word_size_normal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_m050_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_m050_food"
                android:textSize="@dimen/word_size_normal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_m050_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_m050_place"
                android:textSize="@dimen/word_size_normal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_m050_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/word_size_normal" />

        </TableRow>

    </LinearLayout>

</LinearLayout>