<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UIm020" >

    <!-- title bar -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/title_background" >

        <TextView
            android:id="@+id/title_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_ui_meal_top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_titlebar" />
    </RelativeLayout>

    <!-- button row -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_m020_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_m020_add" />

        <Button
            android:id="@+id/btn_m020_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_m020_exit" />

        <Button
            android:id="@+id/btn_m020_all_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_m020_all_delete" />

    </TableRow>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_m020_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/str_m020_information_list"
            android:textSize="@dimen/word_size_large" />

        <TextView
            android:id="@+id/txt_m020_data_total_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_m020_list_title"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_toRightOf="@+id/txt_m020_list_title"
            android:gravity="right" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="#B8B8B8"
        android:visibility="visible" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="43dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_number"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_date"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/food"
                    android:layout_width="250dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_food"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/place"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_place"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="50dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_score"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/people"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_people"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_price"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

                <View
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/memo"
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/blue"
                    android:text="@string/str_m000_memo"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/word_size_normal" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <ListView
                android:id="@+id/lv_m020_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>